feat: finished angular project and docu

--- a/rxjs-demo/src/app/components/register/register.component.html
+++ b/rxjs-demo/src/app/components/register/register.component.html
@@ -1,3 +1,4 @@
+<h1>Hello {{ store.value.name }} {{ store.value.email }}!</h1>
 <form>
   <fieldset>
     <label>
@@ -20,9 +21,4 @@
       />
     </label>
   </fieldset>
-
-  <input
-    type="submit"
-    value="Subscribe"
-  />
 </form>
