--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -7,13 +7,11 @@
       <li><strong>HTL Leonding ({{ store.value.todos.length }} Todos)</strong></li>
     </ul>
     <ul>
-      <li><a href="./register">Register</a></li>
+      <li><a href="./register">Home</a></li>
       <li><a routerLink="./todo">Todo</a></li>
-      <li><a href="#">Products</a></li>
+      <li><a href="./example">Examples</a></li>
     </ul>
   </nav>
-  <h1>Hello {{ store.value.name }} {{ store.value.email }}!</h1>
-  <button (click)="loadTodos()">Load Todos</button>
   <router-outlet/>
 
 </main>
