feat: add more rx operators

--- a/rxjs-demo/src/app/components/example/example.component.html
+++ b/rxjs-demo/src/app/components/example/example.component.html
@@ -12,6 +12,8 @@
   <button (click)="demonstrateDistinct()">distinct</button>
   <button (click)="demonstrateStartWith()">startWith</button>
   <button (click)="demonstratePairwise()">pairwise</button>
+  <button (click)="demonstrateMax()">max</button>
+  <button (click)="demonstrateFind()">find</button>
 
   <div class="output">
     <p><strong>Aktuelle Methode:</strong> {{ currentMethod }}</p>
