docs: changed topic to signals

--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -10,6 +10,7 @@
       <li><a href="./register">Home</a></li>
       <li><a routerLink="./todo">Todo</a></li>
       <li><a href="./example">Examples</a></li>
+      <li><a href="./signal">Signals</a></li>
     </ul>
   </nav>
   <router-outlet/>
