feat: rework code and add signals example

--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -8,7 +8,7 @@
     </ul>
     <ul>
       <li><a href="./register">Home</a></li>
-      <li><a routerLink="./todo">Todo</a></li>
+      <li><a routerLink="./rxjs">RxJS</a></li>
       <li><a href="./example">Examples</a></li>
       <li><a href="./signal">Signals</a></li>
     </ul>
