feat: add signal example

--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -4,12 +4,12 @@
 <main class="container">
   <nav>
     <ul>
-      <li><strong>HTL Leonding ({{ store.value.todos.length }} Todos)</strong></li>
+      <li><strong>Demonstration Signals and RxJS</strong></li>
     </ul>
     <ul>
       <li><a href="./register">Home</a></li>
-      <li><a routerLink="./rxjs">RxJS</a></li>
-      <li><a href="./example">Examples</a></li>
+      <li><a routerLink="./rxjs">Observable</a></li>
+      <li><a href="./example">RxJS-Operators</a></li>
       <li><a href="./signal">Signals</a></li>
     </ul>
   </nav>
