--- a/rxjs-demo/src/app/components/rxjs/rxjs.component.html
+++ b/rxjs-demo/src/app/components/rxjs/rxjs.component.html
@@ -2,7 +2,7 @@
   <h3>Todos (RxJS)</h3>
   <button (click)="loadTodos()">Load Todos</button>
   <ul>
-    <li *ngFor="let todo of todos$ | async">
+    <li *ngFor="let todo of todos | async">
       <input
         type="checkbox"
         [checked]="todo.completed"
