--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -8,7 +8,7 @@
     </ul>
     <ul>
       <li><a href="./register">Home</a></li>
-      <li><a routerLink="./rxjs">Observable</a></li>
+      <li><a href="./rxjs">Observable</a></li>
       <li><a href="./example">RxJS-Operators</a></li>
       <li><a href="./signal">Signals</a></li>
     </ul>
