fix: fixed routing

--- a/rxjs-demo/src/app/app.component.html
+++ b/rxjs-demo/src/app/app.component.html
@@ -7,10 +7,10 @@
       <li><strong>Demonstration Signals and RxJS</strong></li>
     </ul>
     <ul>
-      <li><a href="./register">Home</a></li>
-      <li><a href="./rxjs">Observable</a></li>
-      <li><a href="./example">RxJS-Operators</a></li>
-      <li><a href="./signal">Signals</a></li>
+      <li><a [routerLink]="'/register'">Home</a></li>
+      <li><a [routerLink]="'/rxjs'">Observable</a></li>
+      <li><a [routerLink]="'/example'">RxJS-Operators</a></li>
+      <li><a [routerLink]="'/signal'">Signals</a></li>
     </ul>
   </nav>
   <router-outlet/>
