--- a/rxjs-demo/src/app/components/rxjs/rxjs.component.html
+++ b/rxjs-demo/src/app/components/rxjs/rxjs.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>Todos (RxJS)</h3>
-  <button (click)="loadTodos()">Load Todos</button>
+  <!--<button (click)="loadTodos()">Load Todos</button>-->
   <ul>
     <li *ngFor="let todo of todos | async">
       <input
