--- a/rxjs-demo/src/app/components/signal/signal.component.html
+++ b/rxjs-demo/src/app/components/signal/signal.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>Todos (Signal)</h3>
-  <button (click)="loadTodos()">Load Todos</button>
+  <!--<button (click)="loadTodos()">Load Todos</button>-->
   <ul>
     <li *ngFor="let todo of todos()">
       <input
